--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <meta name="description" content="Desenvolvedor Front End. À procura oportunidades de estágio.">
+    <meta name="description" content="Desenvolvedor Front End. À procura de oportunidades de estágio.">
     <link rel="icon" href="./favicon.svg" type="image/svg+xml">
 
 </head>
