portfólio atualizado 2022 com links de projetos na area experiência

--- a/index.html
+++ b/index.html
@@ -42,43 +42,47 @@
         <h2 class=" subtitulo subtitulo-reserva">Experiência</h2>
         <div>
             <p class="experiencia-texto">Desenvolvo pequenos projetos como o Bikcraft utilizando tecnologias como <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. Faço esses projetos com o objetivo de aprender novas tecnologias e solidificar o meu conhecimento.</p>
-            <div class="empresa">
-                <span class="empresa-ano">2022-23</span>
-                <h3 class="empresa-titulo">Bikcraft</h3>
-                <span class="empresa-titulo">Desenvolvedor Júnio</span>
-                <p class="empresa-texto">Desenvolvo pequenos projetos como o Bikcraft utilizando tecnologias como HTML, CSS e JavaScript. </p>
-                <ul class="empresa-habilidades">
-                    <li id="html">HTML</li>
-                    <li id="css">CSS</li>
-                    <li id="javascript">JavaScript</li>
-                    <li id="ux-design">UX Design</li>
-                    <li id="ui-design">UI Design</li>
-                </ul>
-            </div>
+            <p>Clique para entrar no site</p>
+            <a href="https://renancarlosrocha.github.io/bickcraft/">
+                <div class="empresa">
+                    <span class="empresa-ano">2022</span>
+                    <div>
+                        <h3 class="empresa-titulo">Bikcraft</h3>
+                        <p class="empresa-texto">O objetivo desse projeto era criar um site para apresentação e vendas de bicicleta.</p>
+                    </div>
+                    <ul class="empresa-habilidades">
+                        <li id="html">HTML</li>
+                        <li id="css">CSS</li>
+                        <li id="javascript">JavaScript</li>
+                        <li id="ux-design">UX Design</li>
+                        <li id="ui-design">UI Design</li>
+                    </ul>
+                </div>
+            </a>
 
+            <a href="https://renancarlosrocha.github.io/FlexBlog/">
+                <div class="empresa">
+                    <span class="empresa-ano">2022</span>
+                    <div>
+                        <h3 class="empresa-titulo">FlexBlog</h3>
+                        <p class="empresa-texto">Site feito com o objetivo de melhorar meu entendimento em Flexbox.</p>
+                    </div>
+                    <ul class="empresa-habilidades">
+                        <li id="html">HTML</li>
+                        <li id="css">CSS</li>
+                    </ul>
+                </div>
+            </a>
+            
             <div class="empresa">
                 <span class="empresa-ano">2022</span>
-                <h3 class="empresa-titulo">Surfbot</h3>
-                <span class="empresa-titulo">Estagiário</span>
-                <p class="empresa-texto">Desenvolvo pequenos projetos como o Bikcraft utilizando tecnologias como HTML, CSS e JavaScript. </p>
+                <div>
+                    <h3 class="empresa-titulo">WildBeast</h3>
+                    <p class="empresa-texto">Site feito com o objetivo de melhorar meu entendimento em Grid.</p>
+                </div>
                 <ul class="empresa-habilidades">
                     <li id="html">HTML</li>
                     <li id="css">CSS</li>
-                    <li id="javascript">JavaScript</li>
-                </ul>
-            </div>
-
-            <div class="empresa">
-                <span class="empresa-ano">2022</span>
-                <h3 class="empresa-titulo">Brafé</h3>
-                <span class="empresa-titulo">Estagiário</span>
-                <p class="empresa-texto">Desenvolvo pequenos projetos como o Bikcraft utilizando tecnologias como HTML, CSS e JavaScript. </p>
-                <ul class="empresa-habilidades">
-                    <li id="html">HTML</li>
-                    <li id="css">CSS</li>
-                    <li id="javascript">JavaScript</li>
-                    <li id="ux-design">UX Design</li>
-                    <li id="ui-design">UI Design</li>
                 </ul>
             </div>
         </div>
