index com informações de contato e cursos atualizados

--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
 
             <ul class="curso-lista">
                 <li class="curso">
-                    <span class="curso-status">Em andamento</span>
+                    <span class="curso-status">Completo</span>
                     <h3 class="curso-nome">HTML e CSS para iniciantes</h3>
                     <div class="curso-informacao">
                         <span class="curso-instituicao">Origamid</span>
-                        <span class="curso-hora">23 horas</span>
+                        <span class="curso-hora">46 horas</span>
                     </div>
                 </li>
                 <li class="curso">
@@ -129,16 +129,16 @@
                     <h3 class="curso-nome">UI Design para iniciantes</h3>
                     <div class="curso-informacao">
                         <span class="curso-instituicao">Origamid</span>
-                        <span class="curso-hora">17 horas</span>
+                        <span class="curso-hora">34 horas</span>
                     </div>
                 </li>
 
                 <li class="curso">
-                    <span class="curso-status">Em andamento</span>
+                    <span class="curso-status">Completo</span>
                     <h3 class="curso-nome">CSS Flexbox</h3>
                     <div class="curso-informacao">
                         <span class="curso-instituicao">Origamid</span>
-                        <span class="curso-hora">3 horas</span>
+                        <span class="curso-hora">6 horas</span>
                     </div>
                 </li>
                 <li class="curso">
@@ -146,7 +146,7 @@
                     <h3 class="curso-nome">CSS grid Layout</h3>
                     <div class="curso-informacao">
                         <span class="curso-instituicao">Origamid</span>
-                        <span class="curso-hora">5 horas</span>
+                        <span class="curso-hora">10 horas</span>
                     </div>
                 </li>
 
@@ -155,7 +155,7 @@
                     <h3 class="curso-nome">JavaScript Completo ES6</h3>
                     <div class="curso-informacao">
                         <span class="curso-instituicao">Origamid</span>
-                        <span class="curso-hora">37 horas</span>
+                        <span class="curso-hora">74 horas</span>
                     </div>
                 </li>
                 <li class="curso">
@@ -163,7 +163,7 @@
                     <h3 class="curso-nome">React Completo</h3>
                     <div class="curso-informacao">
                         <span class="curso-instituicao">Origamid</span>
-                        <span class="curso-hora">17 horas</span>
+                        <span class="curso-hora">34 horas</span>
                     </div>
                 </li>
             </ul>
@@ -175,7 +175,7 @@
             <p class="footer-texto">Estou disponível para novos projetos no momento. Entre em contato comigo e marcamos uma conversa.</p>
             <ul class="footer-contato">
                 <li>renan.workcall@gmail.com</li>
-                <li>+55 91 99323-9740 / Whatsapp</li>
+                <li>+55 91 9914-4396 / Whatsapp</li>
             </ul>
             <p class="footer-copy">Renan. Alguns direitos reservados.</p>
         </div>
