Alteração do footer

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 <li>renan.workcall@gmail.com</li>
                 <li>+55 91 9914-4396 / Whatsapp</li>
             </ul>
-            <p class="footer-copy">Renan. Alguns direitos reservados.</p>
+            <p class="footer-copy">Origamid. Alguns direitos reservados.</p>
         </div>
 
     </footer>
