--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <span class="empresa-ano">2022</span>
                 <div>
                     <h3 class="empresa-titulo">WildBeast</h3>
-                    <p class="empresa-texto">Site feito com o objetivo de melhorar meu entendimento em Grid.</p>
+                    <p class="empresa-texto">Site feito com o objetivo de melhorar meu entendimento em Grid. Ainda em desenvolvimento</p>
                 </div>
                 <ul class="empresa-habilidades">
                     <li id="html">HTML</li>
